[gd_scene load_steps=2 format=2]

[ext_resource path="res://scripts/level_cleared_menu.gd" type="Script" id=1]

[node name="LevelClearedMenu" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="Background" type="ColorRect" parent="CanvasLayer"]
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0.133333, 1, 0.227451, 0.137255 )

[node name="VBoxContainer" type="VBoxContainer" parent="CanvasLayer/Background"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -100.0
margin_top = -20.0
margin_right = 100.0
margin_bottom = 20.0

[node name="Label" type="Label" parent="CanvasLayer/Background/VBoxContainer"]
margin_right = 200.0
margin_bottom = 14.0
text = "Level cleared!"
align = 1

[node name="Continue" type="Button" parent="CanvasLayer/Background/VBoxContainer"]
margin_top = 18.0
margin_right = 200.0
margin_bottom = 38.0
text = "Continue"

[node name="Menu" type="Button" parent="CanvasLayer/Background/VBoxContainer"]
margin_top = 42.0
margin_right = 200.0
margin_bottom = 62.0
text = "Return to main menu"

[node name="Quit" type="Button" parent="CanvasLayer/Background/VBoxContainer"]
margin_top = 66.0
margin_right = 200.0
margin_bottom = 86.0
text = "Quit game"

[connection signal="pressed" from="CanvasLayer/Background/VBoxContainer/Continue" to="." method="_on_Continue_pressed"]
[connection signal="pressed" from="CanvasLayer/Background/VBoxContainer/Menu" to="." method="_on_Menu_pressed"]
[connection signal="pressed" from="CanvasLayer/Background/VBoxContainer/Quit" to="." method="_on_Quit_pressed"]
